<resources>
    <string name="app_name">spi</string>

    <!--Onboarding-->
    <string name="first_of_few_steps">First of few steps to set you up with a Bank Account</string>
    <string name="pan_number_title">PAN NUMBER</string>
    <string name="pan_number_hint">ABCDE1234F</string>
    <string name="birthdate_title">BIRTHDATE</string>
    <string name="birthdate_date_hint">DD</string>
    <string name="birthdate_month_hint">MM</string>
    <string name="birthdate_year_hint">YYYY</string>
    <string name="note_pan_dob">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India.Learn More</string>
    <string name="button_next">Next</string>
    <string name="help_i_dont_have_pan">I don\'t have a PAN</string>
    <string name="logo_s">S.</string>
    <string name="error_pan">Please enter valid PAN.</string>
    <string name="error_birthdate">Please enter valid birthdate</string>
    <string name="message_click_learn_more">Learn More is clicked</string>
    <string name="message_success_form_submission">Details submitted successfully</string>
    <string name="message_help_no_pan">Help! I don\'t have pan</string>
</resources>